vehicle stats endpoint added, updated generated openapi file
